# MusicBox

./: .clangd  CLION-TOOLCHAINS.md  CMakeLists.txt  README.md  toolchain-avr.cmake
digistump/hardware/avr/1.6.7/: installed.json
digistump/hardware/avr/1.6.7/cores/tiny/: Print.h  core_adc.h
digistump/hardware/avr/1.6.7/libraries/Adafruit_NeoPixel/: Adafruit_NeoPixel.cpp
midi2code/: midi2code.bat  midi2code.md  midi2code.py
songs/: Christmas.mid  DeckHalls.mid  DeckHalls.tg  JingleBells.mid  JingleBells.tg  Memory.mid  Memory.tg  Minecraft.mid  Minecraft.tg  Titanic.mid  Titanic.tg  Totoro.mid  Totoro.tg
src/: Lights.h  Music.h  MusicBox.h  Player.h  Songs.h  Synth.h  main.cpp
toolchains/: TOOLCHAINS.md
toolchains/avr-gcc/7.3.0-atmel3.6.1-arduino7/avr/include/avr/: pgmspace.h
